--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint:fix": "yarn run lint && yarn run prettier"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.22.5",
     "aptos": "^1.10.0",
     "dotenv": "^16.1.4"
   },
