feat: added decimals test

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "scripts": {
     "test": "jest",
     "prepare": "husky install",
-    "lint": "eslint . --ext .ts --fix",
+    "lint": "npm run compile && eslint . --ext .ts --fix",
     "prettier": "prettier --write 'tests/**/*.ts'",
-    "lint:fix": "yarn run lint && yarn run prettier"
+    "lint:fix": "yarn run lint && yarn run prettier",
+    "compile": "aptos move compile --named-addresses hamsterpocket=39aab5966d864fc2c394239377704ff5e05e1101e44acb2aacbd7f19f6a1a2a7,deployer=1e5320d3a1a12f28c22a52b62a3815cbf0efc49020089d350454f1d3fd53fd90"
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.22.5",
     "aptos": "^1.10.0",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.1.4"
   },
   "devDependencies": {
